--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    user-select: none;
+}
+
 .title {
     color: white;
     font-family: sans-serif;
@@ -96,7 +100,7 @@ h1 span {
     font-size: 50px;
     z-index: 1;
 
-    opacity: 0;    
+    opacity: 0;
 
 }
 
@@ -188,6 +192,7 @@ h1 span {
     margin-left: 22%;
     filter: none;
 }
+
 
 @media only screen and (min-width: 1200px) {
     .lives, .settingsBtn, .invisableBtn, .exit {
